[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0a10",
    "langchain-google-firestore>=0.5.0",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=2.1.2",
    "langgraph>=1.0.0a4",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langgraph-cli[inmem]>=0.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
